fixing the message box in contact form to left align

--- a/Day 7/Portfolio/css/contact.css
+++ b/Day 7/Portfolio/css/contact.css
@@ -120,4 +120,8 @@
    #form-message-txt{
       width: 65%;
   }
+  .message-adjustment{
+   align-items: flex-start;
+   margin-left: 12%;
+  }
 }
